--- a/childrens.css
+++ b/childrens.css
@@ -107,6 +107,7 @@ margin:10px 0 0 0
 .container .container1 .children14{width:4842px}
 .container .container1 .children15{width:5712px}
 .container .container1 .children16{width:8783px}
+.container .container1 .children17{width:10519px}
 
 .container .container1 .children2,
 .container .container1 .children3,
@@ -122,7 +123,8 @@ margin:10px 0 0 0
 .container .container1 .children13,
 .container .container1 .children14,
 .container .container1 .children15,
-.container .container1 .children16{
+.container .container1 .children16,
+.container .container1 .children17{
 height:560px;
 background-color: #cfdac8;
 display: inline-block;
@@ -170,7 +172,8 @@ font-family: 'Lobster', cursive;
 ,.container1 .children13 .photo1 
 ,.container1 .children14 .photo1 
 ,.container1 .children15 .photo1 
-,.container1 .children16 .photo1  {
+,.container1 .children16 .photo1
+,.container1 .children17 .photo1 {
     width:400px;
     height:80%;
     display: inline-block;
@@ -197,7 +200,8 @@ font-family: 'Lobster', cursive;
     .container1 .children13 .photo1 img,
     .container1 .children14 .photo1 img,
     .container1 .children15 .photo1 img ,
-    .container1 .children16 .photo1 img{
+    .container1 .children16 .photo1 img,
+    .container1 .children17 .photo1 img{
         width:100%;
         height:100%;
         border-radius:80px ;
@@ -307,6 +311,7 @@ font-family: 'Lobster', cursive;
     .container .container1 .children14{width:4842px}
     .container .container1 .children15{width:5712px}
     .container .container1 .children16{width:8783px}
+    .container .container1 .children17{width:10519px}
     
     .container .container1 .children2,
     .container .container1 .children3,
@@ -322,7 +327,8 @@ font-family: 'Lobster', cursive;
     .container .container1 .children13,
     .container .container1 .children14,
     .container .container1 .children15,
-    .container .container1 .children16{
+    .container .container1 .children16,
+    .container .container1 .children17{
     height:560px;
     background-color: #cfdac8;
     display: inline-block;
@@ -370,7 +376,8 @@ font-family: 'Lobster', cursive;
     ,.container1 .children13 .photo1 
     ,.container1 .children14 .photo1 
     ,.container1 .children15 .photo1 
-    ,.container1 .children16 .photo1  {
+    ,.container1 .children16 .photo1
+    ,.container1 .children17 .photo1  {
         width:400px;
         height:80%;
         display: inline-block;
@@ -397,7 +404,8 @@ font-family: 'Lobster', cursive;
         .container1 .children13 .photo1 img,
         .container1 .children14 .photo1 img,
         .container1 .children15 .photo1 img ,
-        .container1 .children16 .photo1 img{
+        .container1 .children16 .photo1 img
+        .container1 .children17 .photo1 img{
             width:100%;
             height:100%;
             border-radius:80px ;
@@ -511,6 +519,7 @@ font-family: 'Lobster', cursive;
     .container .container1 .children14{width:4842px}
     .container .container1 .children15{width:5712px}
     .container .container1 .children16{width:8783px}
+    .container .container1 .children17{width:10519px}
     
     .container .container1 .children2,
     .container .container1 .children3,
@@ -526,7 +535,8 @@ font-family: 'Lobster', cursive;
     .container .container1 .children13,
     .container .container1 .children14,
     .container .container1 .children15,
-    .container .container1 .children16{
+    .container .container1 .children16,
+    .container .container1 .children17{
     height:560px;
     background-color: #cfdac8;
     display: inline-block;
@@ -574,7 +584,8 @@ font-family: 'Lobster', cursive;
     ,.container1 .children13 .photo1 
     ,.container1 .children14 .photo1 
     ,.container1 .children15 .photo1 
-    ,.container1 .children16 .photo1  {
+    ,.container1 .children16 .photo1 
+    ,.container1 .children17 .photo1  {
         width:400px;
         height:80%;
         display: inline-block;
@@ -601,7 +612,8 @@ font-family: 'Lobster', cursive;
         .container1 .children13 .photo1 img,
         .container1 .children14 .photo1 img,
         .container1 .children15 .photo1 img ,
-        .container1 .children16 .photo1 img{
+        .container1 .children16 .photo1 img
+        .container1 .children17 .photo1 img{
             width:100%;
             height:100%;
             border-radius:80px ;
@@ -716,6 +728,7 @@ font-family: 'Lobster', cursive;
     .container .container1 .children14{width:4736px}
     .container .container1 .children15{width:5119px}
     .container .container1 .children16{width:7880px}
+    .container .container1 .children17{width:9478px}
     
     .container .container1 .children2,
     .container .container1 .children3,
@@ -731,7 +744,8 @@ font-family: 'Lobster', cursive;
     .container .container1 .children13,
     .container .container1 .children14,
     .container .container1 .children15,
-    .container .container1 .children16{
+    .container .container1 .children16,
+    .container .container1 .children17{
     height:560px;
     background-color: #cfdac8;
     display: inline-block;
@@ -779,7 +793,8 @@ font-family: 'Lobster', cursive;
     ,.container1 .children13 .photo1 
     ,.container1 .children14 .photo1 
     ,.container1 .children15 .photo1 
-    ,.container1 .children16 .photo1  {
+    ,.container1 .children16 .photo1 
+    ,.container1 .children17 .photo1 {
         width:358px;
         height:80%;
         display: inline-block;
@@ -806,9 +821,11 @@ font-family: 'Lobster', cursive;
         .container1 .children13 .photo1 img,
         .container1 .children14 .photo1 img,
         .container1 .children15 .photo1 img ,
-        .container1 .children16 .photo1 img{
+        .container1 .children16 .photo1 img,
+        .container1 .children17 .photo1 img{
             width:100%;
             height:100%;
             border-radius:80px ;
         }}
+        
         
