--- a/childrens.css
+++ b/childrens.css
@@ -108,6 +108,7 @@ margin:10px 0 0 0
 .container .container1 .children15{width:5712px}
 .container .container1 .children16{width:8783px}
 .container .container1 .children17{width:10519px}
+.container .container1 .children18{width:3957px}
 
 .container .container1 .children2,
 .container .container1 .children3,
@@ -124,7 +125,8 @@ margin:10px 0 0 0
 .container .container1 .children14,
 .container .container1 .children15,
 .container .container1 .children16,
-.container .container1 .children17{
+.container .container1 .children17,
+.container .container1 .children18{
 height:560px;
 background-color: #cfdac8;
 display: inline-block;
@@ -173,7 +175,8 @@ font-family: 'Lobster', cursive;
 ,.container1 .children14 .photo1 
 ,.container1 .children15 .photo1 
 ,.container1 .children16 .photo1
-,.container1 .children17 .photo1 {
+,.container1 .children17 .photo1
+,.container1 .children18 .photo1{
     width:400px;
     height:80%;
     display: inline-block;
@@ -199,9 +202,10 @@ font-family: 'Lobster', cursive;
     .container1 .children12 .photo1 img,
     .container1 .children13 .photo1 img,
     .container1 .children14 .photo1 img,
-    .container1 .children15 .photo1 img ,
+    .container1 .children15 .photo1 img,
     .container1 .children16 .photo1 img,
-    .container1 .children17 .photo1 img{
+    .container1 .children17 .photo1 img,
+    .container1 .children18 .photo1 img{
         width:100%;
         height:100%;
         border-radius:80px ;
@@ -312,6 +316,7 @@ font-family: 'Lobster', cursive;
     .container .container1 .children15{width:5712px}
     .container .container1 .children16{width:8783px}
     .container .container1 .children17{width:10519px}
+    .container .container1 .children18{width:3957px}
     
     .container .container1 .children2,
     .container .container1 .children3,
@@ -328,7 +333,8 @@ font-family: 'Lobster', cursive;
     .container .container1 .children14,
     .container .container1 .children15,
     .container .container1 .children16,
-    .container .container1 .children17{
+    .container .container1 .children17,
+    .container .container1 .children18{
     height:560px;
     background-color: #cfdac8;
     display: inline-block;
@@ -377,7 +383,8 @@ font-family: 'Lobster', cursive;
     ,.container1 .children14 .photo1 
     ,.container1 .children15 .photo1 
     ,.container1 .children16 .photo1
-    ,.container1 .children17 .photo1  {
+    ,.container1 .children17 .photo1 
+    ,.container1 .children18 .photo1{
         width:400px;
         height:80%;
         display: inline-block;
@@ -403,9 +410,10 @@ font-family: 'Lobster', cursive;
         .container1 .children12 .photo1 img,
         .container1 .children13 .photo1 img,
         .container1 .children14 .photo1 img,
-        .container1 .children15 .photo1 img ,
-        .container1 .children16 .photo1 img
-        .container1 .children17 .photo1 img{
+        .container1 .children15 .photo1 img,
+        .container1 .children16 .photo1 img,
+        .container1 .children17 .photo1 img,
+        .container1 .children18 .photo1 img{
             width:100%;
             height:100%;
             border-radius:80px ;
@@ -520,6 +528,7 @@ font-family: 'Lobster', cursive;
     .container .container1 .children15{width:5712px}
     .container .container1 .children16{width:8783px}
     .container .container1 .children17{width:10519px}
+    .container .container1 .children18{width:3957px}
     
     .container .container1 .children2,
     .container .container1 .children3,
@@ -536,7 +545,8 @@ font-family: 'Lobster', cursive;
     .container .container1 .children14,
     .container .container1 .children15,
     .container .container1 .children16,
-    .container .container1 .children17{
+    .container .container1 .children17,
+    .container .container1 .children18{
     height:560px;
     background-color: #cfdac8;
     display: inline-block;
@@ -585,7 +595,8 @@ font-family: 'Lobster', cursive;
     ,.container1 .children14 .photo1 
     ,.container1 .children15 .photo1 
     ,.container1 .children16 .photo1 
-    ,.container1 .children17 .photo1  {
+    ,.container1 .children17 .photo1
+    ,.container1 .children18 .photo1 {
         width:400px;
         height:80%;
         display: inline-block;
@@ -611,9 +622,10 @@ font-family: 'Lobster', cursive;
         .container1 .children12 .photo1 img,
         .container1 .children13 .photo1 img,
         .container1 .children14 .photo1 img,
-        .container1 .children15 .photo1 img ,
-        .container1 .children16 .photo1 img
-        .container1 .children17 .photo1 img{
+        .container1 .children15 .photo1 img,
+        .container1 .children16 .photo1 img,
+        .container1 .children17 .photo1 img,
+        .container1 .children18 .photo1 img{
             width:100%;
             height:100%;
             border-radius:80px ;
@@ -729,6 +741,7 @@ font-family: 'Lobster', cursive;
     .container .container1 .children15{width:5119px}
     .container .container1 .children16{width:7880px}
     .container .container1 .children17{width:9478px}
+    .container .container1 .children18{width:3169px}
     
     .container .container1 .children2,
     .container .container1 .children3,
@@ -745,7 +758,8 @@ font-family: 'Lobster', cursive;
     .container .container1 .children14,
     .container .container1 .children15,
     .container .container1 .children16,
-    .container .container1 .children17{
+    .container .container1 .children17,
+    .container .container1 .children18{
     height:560px;
     background-color: #cfdac8;
     display: inline-block;
@@ -794,7 +808,8 @@ font-family: 'Lobster', cursive;
     ,.container1 .children14 .photo1 
     ,.container1 .children15 .photo1 
     ,.container1 .children16 .photo1 
-    ,.container1 .children17 .photo1 {
+    ,.container1 .children17 .photo1
+    ,.container1 .children18 .photo1{
         width:358px;
         height:80%;
         display: inline-block;
@@ -820,9 +835,10 @@ font-family: 'Lobster', cursive;
         .container1 .children12 .photo1 img,
         .container1 .children13 .photo1 img,
         .container1 .children14 .photo1 img,
-        .container1 .children15 .photo1 img ,
+        .container1 .children15 .photo1 img,
         .container1 .children16 .photo1 img,
-        .container1 .children17 .photo1 img{
+        .container1 .children17 .photo1 img,
+        .container1 .children18 .photo1 img{
             width:100%;
             height:100%;
             border-radius:80px ;
